wip on making model looks data driven